# microservice_rs

./: Cargo.toml  README.md  run.sh
migrations/2020-04-22-082417_create_message/: up.sql
src/: main.rs
