[package]
name = "microservice_rs"
version = "0.1.0"
authors = ["suhanyujie <suhanyujie@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.5.3"
futures = "0.1.17"
hyper = "0.11.13"
log = "0.4.1"
url = "2.1.1"
serde = "1.0.106"
serde_json = "1.0.51"
serde_derive = "1.0.106"
diesel = {version = "1.4.4", features = ["postgres"]}
dotenv = "0.15.0"
maud = "0.21.0"
